# 8heap

./: .gitignore  .travis.yml  CMakeLists.txt  FirstCompare.hpp  H8.hpp  Heap8.hpp  Heap8Aux.hpp  Heap8Embed.hpp  HeapAux8.hpp  HeapAuxBenchmark.cpp  HeapAuxTest.cpp  HeapBenchmark.cpp  HeapMapBenchmark.cpp  HeapMapTest.cpp  HeapN.hpp  HeapTest.cpp  Makefile  MergeBenchmark.cpp  README.md  Sort8.cpp  Sort8.hpp  Sort8Benchmark.cpp  Sort8Test.cpp  StdMinHeap.hpp  StdMinHeapMap.hpp  U48.hpp  U48Test.cpp  align.h  altBench.cpp  configure  h8.c  h8.h  h8Benchmark.cpp  h8Test.cpp  minpos.h  minposBenchmark.cpp  minposFollyBenchmark.cpp  minposTest.cpp  v128.h
experiments/: sort8.cpp
